# scx-void

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  INIT.md  README.md  TASK.md  libtypes.rlib  template.md
.opencode/command/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
.wiki/: Home.md
.wiki/Overview/: Architecture.md  Development-Guide.md  Error-Handling.md
.wiki/cli/: CLI-Reference.md
.wiki/platform/: Platform-Abstraction.md
.wiki/services/audio/: Audio-Service.md
.wiki/services/project/: Project-Service.md
.wiki/services/setup/: Setup-Service.md
.wiki/services/system/: System-Service.md
.wiki/utils/: Utilities.md
assets/templates/ai_rule/: advanced.md  base.md  basic.md  java.md  nestjs.md  nextjs.md  node-cli.md  react.md  tauri.md  vue3.md
assets/templates/claude_rule/: basic.md
assets/templates/node_ts/: README.md
openspec/: AGENTS.md  project.md
src/: errors.rs  main.rs
src/cli/: audio.rs  compress.rs  convert.rs  mod.rs  project.rs  setup.rs  system.rs  utils.rs
src/platform/: macos.rs  mod.rs  windows.rs
src/services/: mod.rs
src/services/audio/: audio_service.rs  decoder.rs  mod.rs  model.rs  whisper.rs
src/services/compress/: format.rs  mod.rs  webp.rs
src/services/convert/: heic.rs  mod.rs  registry.rs
src/services/project/: ai_rule.rs  claude_rule.rs  generator.rs  mod.rs  project.rs  project_service.rs
src/utils/: fs.rs  git.rs  mod.rs  shell.rs
tests/: ai_rule_test.rs  audio_transcribe_test.rs  claude_rule_test.rs  compress_test.rs  convert_test.rs  git_phase1_test.rs  system_commands_test.rs
(+36 files in other folders)
