[package]
name = "scx-void"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
duct = "0.13"
tokio = { version = "1.0", features = ["full"] }
symphonia = { version = "0.5", features = ["aac", "isomp4"] }
whisper-rs = "0.10"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["stream"] }
dirs = "5.0"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tempfile = "3.10"
url = "2.5"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
